# Simulacro-System-Administrator

./: README.md
estaconn/remoteconn/base/: remoteconn  remoteconn2  remoteconn2.c  sendcommand.c
estaconn/remoteconn/test/: prova.c  prova2.c  remoteconn.c  remoteconn2.c  remoteconn4.c  remoteconn_work.c
reaction/: AUTHORS  Makefile.am  Makefile.in  README  THANKS  configure  configure.in
reaction/docs/: Makefile  Makefile.am  Makefile.in  reaction.1  reaction.pod
reaction/src/: Makefile.am  Makefile.in  blib.c  blib.h  bsmt.h  context.c  gram.c  gram.h  gram.y  intern.h  lex.c  lex.l  module.c  reaction.c  reaction.h  runtime.c
reaction/src/modules/MOD_BOOLREG/: MOD_BOOLREG.c  Makefile.am  Makefile.in
reaction/src/modules/MOD_CONNECT/: MOD_CONNECT.c  Makefile.am  Makefile.in
reaction/src/modules/MOD_REG/: MOD_REG.c  Makefile.am  Makefile.in
reaction/src/modules/lib/: Makefile.am  Makefile.in  managebuffer.c
reaction/src/parser/: simulacro2xml  simulacro2xml.c  xml2simulacro  xml2simulacro.c  xmldeparse.c  xmlparse.c  xmlparse.h  xmlparser.h
